--- a/src/Components/UserData/UserCard.css
+++ b/src/Components/UserData/UserCard.css
@@ -4,6 +4,10 @@
   width: 120%;
   padding: 5%;
   border-radius: 2rem;
+  background-color: whitesmoke;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+
+
 }
 .Usercard {
   display: flex;
